# gv-targeting-model

./: .gitignore  README.md  Readme.md  __init__.py  evaluation.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  training-validation.ipynb  validation.ipynb  validation_of_videos.txt
.github/workflows/: testing.yml
code/models/: map_classifier_v1.py
docs/: License.md
scripts/: constants.py  paths.py  seeds.py  settings.py  setup_paths.py
scripts/models/: map-classification-model.py  map_classifier_v1.py  template.py
src/GameVisionTargetingModel/models/: map_classifier_v1.py
src/GameVisionTargetingModel/models/classification/map/v1/: layers.py  map_classifier_v1.py
src/GameVisionTargetingModel/models/classification/map/v1/setup/: setup_of_input_layer.py
src/GameVisionTargetingModel/models/classification/map/v1/setup/middle_layer/: decision.py  first.py  second.py
src/GameVisionTargetingModel/models/map_classification/V1/: map_classifier_v1.py
src/GameVisionTargetingModel/models/map_classification/V1/setup/: __init__.py  setup_of_middle_layer.py  setup_of_output_layer.py
src/GameVisionTargetingModel/models/map_classification/V1/setup/middle_layer/: __init__.py
src/GameVisionTargetingModel/variables/: __init__.py  model_settings.py
src/game-vision-targeting-model/models/: map_classifier_v1.py
tests/: map_classifier_test.py  notebook.ipynb
