[build-system]
requires = ["setuptools==61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gv-targeting-model_DESIGNERMADSEN"
version = "0.0.1"
authors = [
  { name="Kent vejrup Madsen", email="kent.vejrup.madsen@outlook.com" },
]

description = "A small example package"
readme = "Readme.md"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/KentVejrupMadsen/gv-targeting-model"
"Bug Tracker" = "https://github.com/KentVejrupMadsen/gv-targeting-model/issues"
